--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  background-color:  #F3F4F6;
+  color:#374151 ;
   font-family: Arial, Helvetica, sans-serif;
 }
